fix(lesehelden): Align test left

--- a/assets/lesehelden/main.scss
+++ b/assets/lesehelden/main.scss
@@ -19,8 +19,7 @@ body {
   flex: 1;
   flex-direction: column;
   font-size: 16px;
-  font-family: "Times New Roman";
-  //font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-weight: normal;
 }
 
